--- a/app/src/main/res/layout/agregar_comentarios.xml
+++ b/app/src/main/res/layout/agregar_comentarios.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -51,9 +50,8 @@
 
             <TextView
                 android:id="@+id/txt_nuevocomentario"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="start|center_vertical"
                 android:includeFontPadding="false"
                 android:maxLines="1"
@@ -63,15 +61,6 @@
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:paddingStart="8dp"
-                />
-
-            <RatingBar
-                android:id="@+id/estrellas"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:numStars="5"
-                android:stepSize="1.0"
-                style="@style/Widget.AppCompat.RatingBar.Small"
                 />
         </LinearLayout>
 
@@ -84,6 +73,30 @@
             android:textSize="15sp"
             android:padding="10dp"
             android:layout_marginBottom="20dp"
+            />
+
+        <TextView
+            android:id="@+id/txt_calificar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/calificar"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:textSize="20sp"
+            android:paddingStart="8dp"
+            android:layout_marginStart="10dp"
+            />
+
+        <RatingBar
+            android:id="@+id/estrellas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:layout_marginTop="15dp"
+            android:stepSize="1.0"
+            android:isIndicator="false"
+            android:layout_gravity="center_horizontal"
             />
     </LinearLayout>
 
