--- a/app/src/main/res/layout/perfil_especialista.xml
+++ b/app/src/main/res/layout/perfil_especialista.xml
@@ -122,9 +122,10 @@
                             android:background="@drawable/image_rectangle1"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
-                            android:inputType="none"
+                            android:inputType="text"
                             android:paddingStart="10dp"
-                            android:paddingTop="15dp" />
+                            android:paddingTop="15dp"
+                            />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <ImageButton
@@ -172,7 +173,7 @@
                             android:paddingStart="10dp"
                             android:paddingTop="15dp"
                             android:background="@drawable/image_rectangle1"
-                            android:inputType="none"
+                            android:inputType="number"
                             android:focusable="false"
                             android:focusableInTouchMode="false"/>
                     </com.google.android.material.textfield.TextInputLayout>
@@ -210,6 +211,7 @@
                     android:drawableStart="@drawable/ic_email"
                     android:drawableTint="@color/gris"
                     android:drawablePadding="18dp"
+                    android:inputType="text"
                     android:background="@drawable/image_rectangle1"
                     android:paddingStart="10dp"
                     android:paddingTop="13dp"
@@ -253,7 +255,7 @@
                             android:layout_height="wrap_content"
                             android:paddingStart="10dp"
                             android:background="@drawable/image_rectangle1"
-                            android:inputType="none"
+                            android:inputType="number"
                             android:focusable="false"
                             android:focusableInTouchMode="false"/>
                     </com.google.android.material.textfield.TextInputLayout>
@@ -302,7 +304,7 @@
                             android:layout_height="wrap_content"
                             android:paddingStart="10dp"
                             android:background="@drawable/image_rectangle1"
-                            android:inputType="none"
+                            android:inputType="text"
                             android:focusable="false"
                             android:focusableInTouchMode="false"/>
                     </com.google.android.material.textfield.TextInputLayout>
