--- a/app/src/main/res/layout/registro_cliente.xml
+++ b/app/src/main/res/layout/registro_cliente.xml
@@ -109,6 +109,7 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="10dp"
                         android:background="@drawable/image_rectangle1"
+                        android:inputType="text"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -141,6 +142,7 @@
                         android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
                         android:hint="@string/ej_123456789"
+                        android:inputType="number"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -173,6 +175,7 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
+                        android:inputType="text"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -205,6 +208,7 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
+                        android:inputType="number"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
