--- a/app/src/main/res/layout/registro_especialista.xml
+++ b/app/src/main/res/layout/registro_especialista.xml
@@ -109,6 +109,7 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="10dp"
                         android:background="@drawable/image_rectangle1"
+                        android:inputType="text"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -139,7 +140,8 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
-                        android:hint="@string/ej_123456789" />
+                        android:hint="@string/ej_123456789"
+                        android:inputType="number"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -171,6 +173,7 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
+                        android:inputType="text"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -203,6 +206,7 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
+                        android:inputType="number"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -233,6 +237,7 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="10dp"
                         android:background="@drawable/image_rectangle1"
+                        android:inputType="text"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
