Visualizacion de comentarios como especialista
Se agrega la funcionalidad de que un especialista pueda visualizar los comentarios que le han hecho a sus servicios, además de arreglar los detalles en agregar comentario como cliente : -Al escribir debe empezar de arriba, no del centro
-No debe dejar publicar el comentario sin haber dejado ningún comentario y sin calificar
-Quitar el subrayado del botón "Nuevo comentario"

--- a/app/src/main/res/layout/agregar_comentarios.xml
+++ b/app/src/main/res/layout/agregar_comentarios.xml
@@ -73,6 +73,7 @@
             android:textSize="15sp"
             android:padding="10dp"
             android:layout_marginBottom="20dp"
+            android:gravity="top"
             />
 
         <TextView
