--- a/app/src/main/res/layout/clientes_comentarios.xml
+++ b/app/src/main/res/layout/clientes_comentarios.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginVertical="5dp"
-        android:text="@string/nuevocomentario"
+        android:text="@string/anadir_new_comment"
         android:drawableEnd="@drawable/baseline_add_24"
         android:textStyle="bold"
         android:layout_below="@+id/header"
