--- a/app/src/main/res/layout/detalle_servicio_cliente.xml
+++ b/app/src/main/res/layout/detalle_servicio_cliente.xml
@@ -78,8 +78,8 @@
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             android:numStars="5"
-            android:rating="2"
-            android:stepSize="5"
+            android:stepSize="0.5"
+            android:isIndicator="true"
             style="?android:attr/ratingBarStyleIndicator" />
 
     </RelativeLayout>
