--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -38,7 +38,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_below="@id/imgcontactollamar"
-        android:text="Llamar"
+        android:text="@string/btn_llamar"
         android:textColor="@color/white"
         android:textSize="22sp" />
 
@@ -60,7 +60,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_below="@id/imgcontactocorreo"
-        android:text="Contactar por correo"
+        android:text="@string/btn_contactar_correo"
         android:textColor="@color/white"
         android:textSize="22sp" />
 
