--- a/app/src/main/res/layout/detalle_servicio_cliente.xml
+++ b/app/src/main/res/layout/detalle_servicio_cliente.xml
@@ -38,7 +38,8 @@
         android:id="@+id/containerimgrating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="100dp"
+        android:gravity="center">
 
         <!-- Foto del servicio -->
         <com.google.android.material.imageview.ShapeableImageView
@@ -48,6 +49,7 @@
             android:layout_gravity="top|start"
             android:layout_marginStart="28dp"
             android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
             android:scaleType="centerCrop"
             android:src="@drawable/perfil_especialista"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,33 +57,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/radius2"
             />
-
-        <TextView
-            android:id="@+id/txtcalificacion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/txt_calificacion"
-            android:layout_toEndOf="@id/imageServiceSpecialist"
-            android:layout_marginTop="30dp"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_marginStart="45dp"
-            android:layout_marginEnd="30dp"
-            />
-
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/imageServiceSpecialist"
-            android:layout_below="@id/txtcalificacion"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="10dp"
-            android:numStars="5"
-            android:stepSize="0.5"
-            android:isIndicator="true"
-            style="?android:attr/ratingBarStyleIndicator" />
 
     </RelativeLayout>
 
