--- a/app/src/main/res/layout/ver_detalle_servicios_especialista.xml
+++ b/app/src/main/res/layout/ver_detalle_servicios_especialista.xml
@@ -38,15 +38,17 @@
         android:id="@+id/containerimgrating"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="100dp"
+        android:gravity="center">
 
         <!-- Foto del servicio -->
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageServiceSpecialist"
             android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_height="180dp"
             android:layout_gravity="top|start"
             android:layout_marginStart="28dp"
+            android:layout_centerHorizontal="true"
             android:scaleType="centerCrop"
             android:src="@drawable/perfil_especialista"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,36 +57,7 @@
             app:shapeAppearanceOverlay="@style/radius2"
             />
 
-        <TextView
-            android:id="@+id/txtcalificacion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/txt_calificacion"
-            android:layout_toEndOf="@id/imageServiceSpecialist"
-            android:layout_marginTop="30dp"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            />
-
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/imageServiceSpecialist"
-            android:layout_below="@id/txtcalificacion"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="10dp"
-            android:numStars="5"
-            android:rating="2"
-            android:stepSize="5"
-            style="?android:attr/ratingBarStyleIndicator" />
-
     </RelativeLayout>
-
-
 
     <!-- Nombre del servicio -->
     <TextView
@@ -92,6 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/containerimgrating"
+
         android:layout_marginStart="35dp"
         android:layout_marginTop="15dp"
         android:text="@string/nombreservicio"
