Implementacion de validacion rut, Mejoras de navegacion cliente y recuperacion de contraseña
se implemento el validador del rut para cliente y especialista, se mejoro la navegacion de los botones en la interfaz de cliente y se agrego la opcion de recuperar contraseña con el correo para el cliente y especialista

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -119,6 +119,17 @@
         </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/olvido_su_contrase_a"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login_specialist"/>
 
     <Button
         android:id="@+id/btn_login_specialist"
